# comp

./: .gitignore  ANF.hs  Alpha.hs  Assemble.hs  Bench.hs  Compile.hs  Convert.hs  Eval.hs  EvalOptimized.hs  EvalShortcut.hs  Expr.hs  Gen.hs  Instruction.hs  KNormal.hs  Lex.x  Lexer.x  Main.hs  Makefile  NOTES  Nameless.hs  Parse.hs  Parse.y  Parser.y  Pretty.hs  README.md  Syntax.hs  Test.hs  TestAlex.x  Type.hs  Typing.hs  all.h  ast.ml  bench.csv  chunk.c  chunk.h  compiler.c  debug.c  environment.ml  error.ml  forth.S  (+46 more)
.old/cc0/: Assemble.hs  Convert.hs  Instruction.hs  Lex.x  Main.hs  Parse.y  Syntax.hs  qcc.ml  qccx.c  run  test.c
.old/forth0/: README.md  forth.S  forth.f
.old/forth0/examples/: cat.f  env.f  hello.f
.old/jit0/: README.md  hardcoded.c  mandel_jit.c  micro_asm.h  simple.c
.old/lox0/: ast.ml  parser.ml  scanner.ml  token_kind.ml
.old/lox0/examples/: block.lox  fun.lox
.old/lox1/: chunk.c  common.h  debug.c  main.c  memory.c  object.c  run  scanner.c  scanner.h  table.c  value.c  value.h
.old/ml0/: .gitignore  Gen.hs  Lexer.x  Name.hs  Syntax.hs  input.txt
.old/ml0/min-caml/: .gitignore
.old/stlc0/: ANF.hs  Bench.hs  Eval.hs  Expr.hs  Lex.x  Main.hs  Parse.y  README.md  Syntax.hs  generate_test.pl  run
.old/stlc1/: .gitignore  README.md  generate_test.pl  run
.old/stlc1/app/: Main.hs
Eval/: CEK.hs  Common.hs  Krivine.hs  Strict.hs
examples/: fizzbuzz.f  hello.lox  rule110.f  var.lox
min-caml/: .gitignore  input.txt  main.ml  run  show.ml  tests1.txt  tests2.txt
src/: Env.hs  Infer.hs  Parse.hs  Type.hs
test/: check.txt
(+3 files in other folders)
