cabal-version: 2.4
name:          stlc
version:       0.1.0.0

common common
    default-language: Haskell2010

    default-extensions:
        BlockArguments
        CPP
        LambdaCase
        MagicHash
        Strict
        TemplateHaskell
        UnboxedTuples

    ghc-options:
        -- Warnings
        -Wall
        -Wcompat
        -Werror
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wno-name-shadowing
        -Wredundant-constraints
        -- Optimizer
        -fmax-worker-args=20
        -fworker-wrapper-cbv
        -fexpose-all-unfoldings
        -O2
        -- Runtime
        -rtsopts
        -with-rtsopts=-M4g

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        Env
        Expr
        Infer
        Parse
        Type

    build-depends:
        base             ^>= 4.18,
        bytestring       ^>= 0.11,
        flatparse        ^>= 0.4,
        template-haskell ^>= 2.20,
        transformers     ^>= 0.6,

executable stlc
    import: common
    main-is: Main.hs
    hs-source-dirs: app

    build-depends:
        base       ^>= 4.18,
        bytestring ^>= 0.11,
        stlc       ^>= 0.1,
